--- a/StockFeed/app/src/main/res/values/strings.xml
+++ b/StockFeed/app/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
 <resources>
 
     <string name="app_name">StockFeed</string>
-    <string name="title_section1">Section 1</string>
-    <string name="title_section2">Section 2</string>
-    <string name="title_section3">Section 3</string>
+    <string name="title_section1">Options</string>
+    <string name="title_section2">Favorites</string>
+    <string name="title_section3">All Stocks</string>
     <string name="action_refresh">Refresh</string>
+    <string name="stock_name">Stock Name</string>
 
 
 </resources>
